--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "citong-react-component",
-  "version": "0.2.4",
+  "name": "febs-react-component",
+  "version": "0.0.1",
   "license": "BSD-3-Clause",
-  "homepage": "https://github.com/brainpoint/citong-react-component#readme",
+  "homepage": "https://github.com/brainpoint/febs-react-component#readme",
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/brainpoint/citong-react-component.git"
+    "url": "git+ssh://git@github.com/brainpoint/febs-react-component.git"
   },
   "keywords": [
     "react-native",
     "react",
-    "citong-react-web",
-    "citong-react-component"
+    "febs-react-web",
+    "febs-react-component"
   ],
   "peerDependencies": {
     "deep-equal": "^1.0.1",
-    "react": "^15.1",
-    "react-dom": "^15.1",
+    "react": "^15.3",
+    "react-dom": "^15.3",
     "react-router": "^3.0.0"
   }
 }
