--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "febs-react-component",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "license": "BSD-3-Clause",
   "homepage": "https://github.com/brainpoint/febs-react-component#readme",
   "repository": {
@@ -10,13 +10,20 @@
   "keywords": [
     "react-native",
     "react",
+    "febs",
     "febs-react-web",
     "febs-react-component"
   ],
-  "peerDependencies": {
+  "scripts": {
+    "postinstall": "node scripts/rename-package.js"
+  },
+  "dependencies": {
     "deep-equal": "^1.0.1",
-    "react": "^15.3",
-    "react-dom": "^15.3",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-router": "^3.0.0"
+  },
+  "devDependencies": {
+    "febs": "0.0.3"
   }
 }
